[gd_scene load_steps=10 format=3 uid="uid://0kw3y6vyu752"]

[ext_resource type="Script" path="res://runner_tile.gd" id="1_6cgvg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0hnw0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_avqkd"]
albedo_color = Color(0.375383, 0.241494, 0.165545, 1)

[sub_resource type="BoxMesh" id="BoxMesh_stwc8"]
material = SubResource("StandardMaterial3D_avqkd")

[sub_resource type="BoxMesh" id="BoxMesh_o584d"]

[sub_resource type="BoxShape3D" id="BoxShape3D_argya"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hw3k7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ypt3b"]
albedo_color = Color(0.564706, 0.478431, 0.196078, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ac3ku"]
material = SubResource("StandardMaterial3D_ypt3b")

[node name="RunnerTile" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
script = ExtResource("1_6cgvg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("BoxShape3D_0hnw0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0)
mesh = SubResource("BoxMesh_stwc8")
skeleton = NodePath("../CollisionShape3D")

[node name="Slider" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Slider"]
transform = Transform3D(1, 0, 0, 0, 0.1, 0, 0, 0, 3, 0, 0, 0)
mesh = SubResource("BoxMesh_o584d")
skeleton = NodePath("../CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Slider"]
transform = Transform3D(1, 0, 0, 0, 0.1, 0, 0, 0, 3, 0, 0, 0)
shape = SubResource("BoxShape3D_argya")

[node name="Coin" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -2.07304)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Coin"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-09, -0.5, 0, 0.05, -2.18557e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_hw3k7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Coin"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-09, -0.5, 0, 0.05, -2.18557e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_ac3ku")

[node name="Coin2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -2.47661)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Coin2"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-09, -0.5, 0, 0.05, -2.18557e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_hw3k7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Coin2"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-09, -0.5, 0, 0.05, -2.18557e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_ac3ku")

[node name="Coin3" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -2.98054)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Coin3"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-09, -0.5, 0, 0.05, -2.18557e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_hw3k7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Coin3"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-09, -0.5, 0, 0.05, -2.18557e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_ac3ku")

[node name="Coin4" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -3.44145)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Coin4"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-09, -0.5, 0, 0.05, -2.18557e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_hw3k7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Coin4"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-09, -0.5, 0, 0.05, -2.18557e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_ac3ku")

[connection signal="body_entered" from="Slider" to="." method="_on_slider_body_entered"]
[connection signal="body_entered" from="Coin" to="." method="_on_coin_body_entered"]
[connection signal="body_entered" from="Coin2" to="." method="_on_coin_body_entered"]
[connection signal="body_entered" from="Coin3" to="." method="_on_coin_body_entered"]
[connection signal="body_entered" from="Coin4" to="." method="_on_coin_body_entered"]
